--- a/src/System.Linq.csproj
+++ b/src/System.Linq.csproj
@@ -83,7 +83,6 @@
     <Compile Include="System\Linq\Distinct.cs" />
     <Compile Include="System\Linq\ElementAt.cs" />
     <Compile Include="System\Linq\Enumerable.cs" />
-    <Compile Include="System\Linq\Errors.cs" />
     <Compile Include="System\Linq\Except.cs" />
     <Compile Include="System\Linq\First.cs" />
     <Compile Include="System\Linq\Grouping.cs" />
@@ -111,6 +110,7 @@
     <Compile Include="System\Linq\Skip.cs" />
     <Compile Include="System\Linq\Sum.cs" />
     <Compile Include="System\Linq\Take.cs" />
+    <Compile Include="System\Linq\ThrowHelper.cs" />
     <Compile Include="System\Linq\ToCollection.cs" />
     <Compile Include="System\Linq\Union.cs" />
     <Compile Include="System\Linq\Utilities.cs" />
