update corefx to `ae987068bb07d7b8af458874d74714083a84618c`

--- a/tests/System.Linq.Tests.csproj
+++ b/tests/System.Linq.Tests.csproj
@@ -4,16 +4,10 @@
     <Configurations>netcoreapp-Debug;netcoreapp-Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AppendPrependTests.cs" />
-    <Compile Include="SkipLastTests.cs" />
-    <Compile Include="TakeLastTests.cs" />
-    <Compile Include="OrderByTests.cs" />
-    <Compile Include="ToHashSetTests.cs" />
-    <Compile Include="SelectManyTests.netcoreapp.cs" />
-    <Compile Include="ZipTests.netcoreapp.cs" />
     <Compile Include="AggregateTests.cs" />
     <Compile Include="AllTests.cs" />
     <Compile Include="AnyTests.cs" />
+    <Compile Include="AppendPrependTests.cs" />
     <Compile Include="AsEnumerableTests.cs" />
     <Compile Include="AverageTests.cs" />
     <Compile Include="CastTests.cs" />
@@ -37,25 +31,30 @@
     <Compile Include="JoinTests.cs" />
     <Compile Include="LastOrDefaultTests.cs" />
     <Compile Include="LastTests.cs" />
+    <Compile Include="LifecycleTests.cs" />
     <Compile Include="LongCountTests.cs" />
     <Compile Include="MaxTests.cs" />
     <Compile Include="MinTests.cs" />
     <Compile Include="OfTypeTests.cs" />
     <Compile Include="OrderByDescendingTests.cs" />
+    <Compile Include="OrderByTests.cs" />
     <Compile Include="OrderedSubsetting.cs" />
     <Compile Include="RangeTests.cs" />
     <Compile Include="RepeatTests.cs" />
     <Compile Include="ReverseTests.cs" />
     <Compile Include="SelectManyTests.cs" />
+    <Compile Include="SelectManyTests.netcoreapp.cs" />
     <Compile Include="SelectTests.cs" />
     <Compile Include="SequenceEqualTests.cs" />
     <Compile Include="ShortCircuitingTests.cs" />
     <Compile Include="Shuffler.cs" />
     <Compile Include="SingleOrDefaultTests.cs" />
     <Compile Include="SingleTests.cs" />
+    <Compile Include="SkipLastTests.cs" />
     <Compile Include="SkipTests.cs" />
     <Compile Include="SkipWhileTests.cs" />
     <Compile Include="SumTests.cs" />
+    <Compile Include="TakeLastTests.cs" />
     <Compile Include="TakeTests.cs" />
     <Compile Include="TakeWhileTests.cs" />
     <Compile Include="TestExtensions.cs" />
@@ -63,11 +62,13 @@
     <Compile Include="ThenByTests.cs" />
     <Compile Include="ToArrayTests.cs" />
     <Compile Include="ToDictionaryTests.cs" />
+    <Compile Include="ToHashSetTests.cs" />
     <Compile Include="ToListTests.cs" />
     <Compile Include="ToLookupTests.cs" />
     <Compile Include="UnionTests.cs" />
     <Compile Include="WhereTests.cs" />
     <Compile Include="ZipTests.cs" />
+    <Compile Include="ZipTests.netcoreapp.cs" />
     <Compile Include="$(CommonTestPath)\System\Linq\SkipTakeData.cs">
       <Link>Common\System\Linq\SkipTakeData.cs</Link>
     </Compile>
