--- a/tests/System.Linq.Tests.csproj
+++ b/tests/System.Linq.Tests.csproj
@@ -42,7 +42,6 @@
     <Compile Include="RepeatTests.cs" />
     <Compile Include="ReverseTests.cs" />
     <Compile Include="SelectManyTests.cs" />
-    <Compile Include="SelectManyTests.netcoreapp.cs" />
     <Compile Include="SelectTests.cs" />
     <Compile Include="SequenceEqualTests.cs" />
     <Compile Include="ShortCircuitingTests.cs" />
@@ -67,11 +66,10 @@
     <Compile Include="UnionTests.cs" />
     <Compile Include="WhereTests.cs" />
     <Compile Include="ZipTests.cs" />
-    <Compile Include="ZipTests.netcoreapp.cs" />
-    <Compile Include="$(CommonTestPath)\System\Linq\SkipTakeData.cs">
+    <Compile Include="$(CommonTestPath)System\Linq\SkipTakeData.cs">
       <Link>Common\System\Linq\SkipTakeData.cs</Link>
     </Compile>
-    <Compile Include="$(CommonTestPath)\System\Diagnostics\DebuggerAttributes.cs">
+    <Compile Include="$(CommonTestPath)System\Diagnostics\DebuggerAttributes.cs">
       <Link>Common\System\Diagnostics\DebuggerAttributes.cs</Link>
     </Compile>
     <Compile Include="GroupByTests.DebuggerAttributes.cs" />
