--- a/src/System.Linq.csproj
+++ b/src/System.Linq.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <AssemblyName>System.Linq</AssemblyName>
     <RootNamespace>System.Linq</RootNamespace>
-    <TargetFrameworks>netcoreapp5.0</TargetFrameworks>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
